fix: prevent user select on lightboxImg to avoid unexpected behaviors on mobiles

--- a/assets/code/style.css
+++ b/assets/code/style.css
@@ -263,7 +263,6 @@ ul {
   align-items: center;
   display: flex;
   font-size: 24px;
-  user-select: none;
   transition: margin-right .5s, margin-left .5s
 }
 
